                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 29-10-2005 fixed: display of squares and/or dots for track albumname and crashes sometimes when there was no albumtag in the file.
 - 28-10-2005 fixed: occasional crash between songs when codec info is displayed 
 - 28-10-2005 added: if videos are stacked, imdb query will look for "stackedname.nfo" for url
 - 28-10-2005 changed: show current bitrate for vbr mp3 instead of average bitrate. (needs new MadCodec.dll, also works with renamed in_mp3.dll)
 - 28-10-2005 fixed: no bitrate information for last.fm streams
 - 28-10-2005 fixed: possible thread synchronisation problems in python
 - 28-10-2005 fixed: possible crash at exit of xbmc because of deadlocks in filezilla
 - 28-10-2005 fixed: SITE runxbe in ftp server
 - 28-10-2005 added: progress dialog when openning a multipath bookmark (only supported by music)
 - 28-10-2005 fixed: auto game region would lead to an infinite reboot-loop on ntsc systems
 - 27-10-2005 added: Basic support for Last.fm radio including trackinfo and albumcovers, place the lastfm:// url in a .strm file to play.
                     No love/ban. Skip works but not very nicely. There is an option in general audio settings to en/disable submitting last.fm tracks to your last.fm profile.
                     Note that you must have entered your audioscrobbler/last.fm username/password to play last.fm radio.
 - 27-10-2005 fixed: Slideshow-screensaver start when video is paused cause hang (1313900) [GeminiServer]
 - 27-10-2005 changed: reorganized the program settings a little.
 - 27-10-2005 added: you can now choose which 60hz modes you want to use with the game region overrider.